--- a/package.json
+++ b/package.json
@@ -19,16 +19,22 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
+    "@tanstack/react-query": "^5.20.1",
     "@types/bcrypt": "^5.0.2",
+    "@types/markdown-draft-js": "^2.2.7",
+    "@types/react-draft-wysiwyg": "^1.13.8",
     "@vercel/analytics": "^1.1.1",
     "bcryptjs-react": "^2.4.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.294.0",
+    "markdown-draft-js": "^2.4.0",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-hook-form": "^7.49.2",
+    "react-markdown": "^9.0.1",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
